--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,582 @@
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     font-family: 'Poppins', sans-serif;
+
+}
+
+/*------------------- 
+Hero section start
+---------------------*/
+.hero-section{
+    height: 667px;
+    background-color: #2D25A0;
+    display: flex;
+    align-items: center;
+
+}
+.container{
+    width: 1164px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.hero-left{
+
+
+}
+.top-heading{
+width: 485px;
+font-weight: bold;
+font-size: 64px;
+line-height: 80px;
+color: #FFFFFF;
+margin: 0px;
+padding-bottom: 27px;
+padding-top: 83px;
+}
+
+.button{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    background-color: #E02C6D;
+    width: 168px;
+    height: 44px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.button i{
+    padding-left: 8px;
+    font-size: 16px;
+}
+
+.button:hover{
+    background-color: #fff;
+    color: #E02C6D;
+    transform: scale(1.1);
+    transition: transform 2s;
+}
+
+
+
+
+@keyframes slide {
+    from {transform: translateX(400px);}
+    to {transform: translateX(0px);}
+  }
+
+.hero-right{
+    width: 100%;
+
+}
+.hero-right img{
+    width: 100%;
+    animation-name: slide;
+    animation-duration: 3s ;
+
+}
+/*------------------- 
+Hero section end
+---------------------*/
+
+/*------------------- 
+Player Section Start
+---------------------*/
+.player-section{
+
+    padding-top: 70px;
+}
+.player-container{
+    width: 1050px;
+    margin: auto;
+
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+   grid-column-gap: 30px;
+  grid-row-gap: 30px;
+}
+.player{
+    padding: 15px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+
+}
+.player-image{
+    width: 100%;
+
+}
+.player-name{
+ margin: 0px;
+ padding-top: 15px;
+font-weight: 700;
+font-size: 28px;
+line-height: 40px;
+color: #18191F;
+}
+.player-details{
+    margin: 0px;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+color: #6C6C6C;
+}
+
+/*------------------- 
+Player Section End
+---------------------*/
+
+
+/* ----------------------------
+Copa and Euro Section start
+----------------------------- */
+
+.copa-highlight{
+    width: 100%;
+}
+
+.highlight-container{
+    width: 1050px;
+    margin: auto;
+}
+.highlight{
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    grid-column-gap: 30px;
+}
+.highlight-left{
+    display:flex;
+    flex-direction: column;
+  justify-content: center;
+}
+.highlight-left h3{
+    font-weight: 700;
+font-size: 48px;
+line-height: 60px;
+margin: 0px;
+color: #0A0826;
+}
+.highlight-left p{
+    width: 404px;
+ font-weight: 400;
+font-size: 16px;
+line-height: 28px;
+margin: 0;
+padding-top:10px;
+color: #6C6C6C;
+}
+.highlight-left .button:hover{
+    border:1px solid #E02C6D;
+}
+.highlight-left .button{
+    margin-top: 25px;
+}
+.highlight-right{
+    width: 100%;
+}
+.highlight-right img{
+    width: 100%;
+}
+
+
+
+/* Euro section start 
+-------------------- */
+.euro-cup{
+    width: 100%;
+}
+.euro-container{
+    width: 1050px;
+    margin: auto;
+}
+.euro-highlight{
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    grid-column-gap: 30px;
+}
+.euro-right{
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+  justify-content: center;
+}
+.euro-right h3{
+font-weight: 700;
+font-size: 48px;
+line-height: 60px;
+margin: 0px;
+color: #0A0826;
+}
+.euro-right p{
+    width: 404px;
+ font-weight: 400;
+font-size: 16px;
+line-height: 28px;
+margin: 0;
+padding-top:10px;
+color: #6C6C6C;
+}
+.euro-right .button{
+    margin-top: 25px;
+}
+.euro-left{
+    width: 100%;
+
+}
+.euro-left img{
+    width: 100%;
+}
+.euro-right .button:hover{
+    border:1px solid #E02C6D;
+}
+/* ----------------------------
+Copa and Euro Section end
+----------------------------- */
+
+
+/* ----------------
+Blog Section Start
+-------------------*/
+
+.latest-blogs{
+    width: 100%;
+
+}
+.latest-blogs h2{
+    text-align: center;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 60px;
+    margin: 70px 0px 0px 0px;
+    color: #0A0826;
+}
+.blog-container{
+
+    width: 1050px;
+    margin: auto;
+}  
+.blogs{
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+}
+.blog{
+    padding: 15px;
+    box-shadow: 0px 0px 40px 0px rgb(0 0 0 / 15%);
+}
+
+.blog img{
+    width: 100%;
+}
+.blog h4{
+    font-weight: 600;
+font-size: 20px;
+color: hsl(231, 13%, 11%);
+margin:0px;
+margin-right: 15px;
+line-height: 30px;
+padding-top:10px;
+}
+.blog p{
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+color: #6C6C6C;
+margin:0px;
+}
+.blog a{
+text-decoration: none;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #E02C6D;
+margin:0px;
+}
+
+/* ----------------
+Blog Section end 
+-------------------*/
+
+/* ---------------
+Footer section Start
+-------------------*/
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.logo{
+    margin-top: 150px;
+}
+.logo img{
+    width: auto;
+    height: 100px;
+}
+.social-icon {
+    margin-top: 20px;
+}
+.social-icon a i{
+    font-size: 18px;
+    color: #969BAB;
+    padding: 10px;
+    margin: 0px 7px;
+    border-radius: 20px;
+    background-color: rgb(11 13 23 / 10%);
+
+}
+.social-icon a i:hover{
+    transform: scale(1.1);
+    color: #fff;
+    background-color:#E02C6D; 
+    transition: transform 1s;
+}
+
+.copyright p{
+    
+padding-top: 20px;
+padding-bottom: 50px;
+margin: 0px;
+
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
+color: #000000;
+}
+
+
+
+/* ---------------
+Footer section End 
+-------------------*/
+
+
+
+/* ---------------
+Responsive Media Queries Start
+-------------------*/
+
+@media screen and (max-width: 767px){
+  .hero-section{
+    height: 735px;
+    padding: 0px   16px;
+    display: block;
+    width: 100%;
+  }
+  
+  .container{
+    width: 100%;
+  margin: auto;
+    display:grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+.hero-left{
+
+
+}
+.top-heading{
+width: 278px;
+font-size: 36px;
+line-height: 50px;
+padding-bottom: 30px;
+padding-top: 110px;
+}
+.hero-right{
+margin-top: 50px;
+
+}
+
+.hero-right img{
+    animation: none;
+    
+
+}
+
+
+/*------------------- 
+Player Section Start
+---------------------*/
+.player-section{
+
+    margin-top: 50px;
+    width: 100%;
+    padding: 0px 16px;
+
+}
+.player-container{
+    width: 100%;
+    margin: auto;
+
+}
+.players{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    column-gap: 0px;
+    row-gap: 30px;
+    justify-content: center;
+
+
+
+}
+.player{
+    padding: 15px;
+
+width: fit-content;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+
+}
+
+/*------------------- 
+Player Section End
+---------------------*/
+/* ----------------------------
+Copa and Euro Section start
+----------------------------- */
+
+.highlight-container{
+    width: 100%;
+margin: auto;
+padding: 0px 16px;
+}
+.highlight{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    column-gap: 0px;
+    row-gap: 30px;
+
+
+}
+.highlight-left {
+    width: fit-content;
+}
+
+.highlight-left h3{
+    width: fit-content;
+    font-weight: 700;
+font-size: 30px;
+line-height: 40px;
+
+}
+.highlight-left p{
+    width: fit-content;
+}
+.highlight-right{
+    width: fit-content;
+}
+.highlight-right > img{
+    width:100%;
+}
+
+
+/* Euro section start 
+-------------------- */
+.euro-cup{
+    width: 100%;
+}
+.euro-container{
+    width: 100%;
+    margin: 0px;
+    padding: 0px 16px;
+}
+.euro-highlight{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.euro-right{
+    width:100%;
+    display:flex;
+    flex-direction:column;
+}
+.euro-left > img{
+width: 100%;
+}
+
+.euro-right h3{
+    width: 292px;
+    font-weight: 700;
+font-size: 30px;
+line-height: 40px;
+
+}
+.euro-right p{
+    width: fit-content;
+
+}
+
+
+/* ----------------------------
+Copa and Euro Section end
+----------------------------- */
+
+
+/* ----------------
+Blog Section Start
+-------------------*/
+
+
+.latest-blogs{
+    width: 100%;
+    padding:0px 16px;
+
+}
+
+
+.latest-blogs h2{
+    text-align: center;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 54px;
+    margin: 50px 0px 0px 0px;
+
+}
+.blog-container{
+
+    width: 100%;
+margin: auto;
+
+}
+.blogs{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns:repeat(1, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+}
+
+/* ---------------
+Footer section Start
+-------------------*/
+
+
+.logo{
+    margin-top: 100px;
+}
+.logo img{
+    width: auto;
+    height: 65px;
+}
+
+
+
+
+
+
+
+
+
+
+
 }
